@@ -6,6 +6,7 @@ VERSION 3.0.81
   FEATURES:
    * Last.fm plugin updated to use token-based authentication method and to notify
      user of session key errors (BR 414826, BR 327547)
+   * Reintroducing Last.fm Similar Artists context applet - a new Amarok 3 version
    * Remember the previous destination provider when saving playlist (BR 216528)
 
   CHANGES:
